--- a/style.css
+++ b/style.css
@@ -609,7 +609,10 @@ margin-left: 3px;}
     width: 10%;
     right: 0;
 
-}
+}.footer-bottom {
+    display: block;
+    text-align: center;
 
   }
+}
  
